<resources>
    <string name="app_name">The University Collage</string>

    <!--/// fontawesome String //-->
    <string name="forword_arrow">&#xf105;</string>
    <string name="back_arrow">&#xf104;</string>
    <string name="saveBtn">f0c7</string>
    <string name="plus">&#xf067;</string>
    <string name="tick">&#xf00c;></string>
    <string name="edit">&#xf040;</string>
    <string name="menu">&#xf039;</string>
    <string name="searchIcon">&#xf002;</string>
    <string name="rightArrow">&#xf105;</string>
    <string name="close">&#xf00d;</string>
    <string name="calender">&#xf133;</string>
    <string name="clock">&#xf017;</string>
    <string name="marker">&#xf041;</string>
    <string name="mobile_Icon">&#xf10b;</string>
    <string name="open_envelop">&#xf003;</string>


    <string name="internal_storage">internal storage</string>
    <string name="beliveText">Believe in yourself</string>
    <string name="trustYour">Trust your</string>
    <string name="ability">ability!</string>
    <string name="startnow">Start Now !</string>
    <string name="iAlerdy">I already participate !</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgotPassword">Forgot your password?</string>
    <string name="forgotPassword1">Forgot password</string>
    <string name="singIn">sign in</string>

    <string name="singUpUnderLine"><u>Sign UP</u></string>
    <string name="singInUnderLine"><u>Sign IN</u></string>
    <string name="comfirmPassword">Confirm Password</string>
    <string name="uni">University</string>
    <string name="signUpBtn">sign up</string>
    <string name="forgotPasswordText">Forgot Password</string>
    <string name="forgotText">Enter your email below to recive your password reset instructions</string>
    <string name="emailAddress">please enter your email address</string>
    <string name="send">Send</string>
    <string name="upload">Upload</string>
    <string name="viewPaper">View Papers</string>
    <string name="papers">Papers</string>
    <string name="dammyText">Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="home">Home</string>
    <string name="myProfile">My Profile</string>
    <string name="termOfService">Terms of Service</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="resetPassword">Reset Password</string>
    <string name="dateOfBirth">Date of Birthday</string>
    <string name="univercity">University</string>
    <string name="dateLastSignIn">Date Last Signed In</string>
    <string name="numOfViews">Number of Views on Post</string>
    <string name="memberSince">Member Since</string>
    <string name="name">Name</string>
    <string name="signout">Sign out</string>
    <string name="editText">Edit</string>
    <string name="update">update</string>
    <string name="editProfile">Edit Profile</string>
    <string name="courseTitle">Course Title</string>
    <string name="examType">Exam Type</string>
    <string name="search">Search</string>
    <string name="course">Course:</string>
    <string name="examPaperText">Exam Paper Type:</string>
    <string name="takePhoto">Take Photo</string>
    <string name="chooseFromgallry">Choose from Gallery</string>
    <string name="next">Next</string>
    <string name="exam">Exam</string>
    <string name="shortDescription">Short Description</string>
    <string name="save">Save</string>
    <string name="myPaper">My Papers</string>
    <string name="log_out">Are you sure want to logout ?</string>
    <string name="priPassword">Previous Password</string>
    <string name="new_Password">New Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="cancel">Cancel</string>
    <string name="plzEnterEmailId">Please enter valid email id</string>
    <string name="emailValidation">Please enter valid Email Id</string>
    <string name="passwordValidation">Please Enter Password</string>
    <string name="confirmPasswordValidation">Please Enter confirm Password </string>
    <string name="confiemPasswordnotChange">Password is not matched</string>
    <string name="serverError">Server Error</string>
    <string name="internetFail">Please check your internet connection</string>
    <string name="noDataFound">No exam found.</string>
    <string name="pleseName">Please enter  user name</string>
    <string name="pleaseDate">Please select date</string>
    <string name="enterUni">Please enter university name</string>
    <string name="imageuploading">Image Uploading......</string>
    <string name="pleaseEnterExam">Please enter exam</string>
    <string name="doImageUpload">Image is uploading, Do you want to cancel?</string>
    <string name="approved">Approved</string>
    <string name="pending">Pending</string>
    <string name="facebook_app_id">1867536726598979</string>
    <string name="fb_login_protocol_scheme">fb1867536726598979</string>
    <string name="pleaseenteroldPwd">Please enter privous password</string>
    <string name="pleaseenternewPwd">Please enter new password</string>
    <string name="cmfPassword">Please enter cofirm password</string>
    <string name="resetPasswordSuccessfully">Password reset succeeded</string>
</resources>
