<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/white_bg"
    android:orientation="vertical">
<include layout="@layout/top_bar"
    android:id="@+id/topBar"/>

<!--<RelativeLayout
    android:id="@+id/tool"
    android:layout_width="match_parent"
    android:layout_height="40dp">
    <CustomControl.TextViewIconStyle
        android:layout_width="40dp"
        android:layout_height="match_parent"
        android:text="@string/back_arrow"
        android:textColor="@color/balck"
        android:gravity="center"
        android:textSize="20sp"
        />
    <CustomControl.TextViewProximanovaRegular
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/forgotPasswordText"
        android:gravity="center"
        android:textColor="@color/balck"
        android:textSize="20sp"/>
</RelativeLayout>-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/topBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="200dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="70dp"
                    android:background="@drawable/hat" />

                <LinearLayout
                    android:id="@+id/forgotlText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/logo"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:orientation="vertical">

                    <CustomControl.TextViewProximanovaSemiBold
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/forgotPasswordText"
                        android:textColor="@android:color/black"
                        android:textSize="26dp" />

                    <CustomControl.TextViewProximanovaRegular
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:gravity="center"
                        android:lineSpacingExtra="5dp"
                        android:text="@string/forgotText" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/forgotlText"
                    android:layout_marginRight="30dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="20dp">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/emailWrapper"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintTextAppearance="@color/balck"
                        android:textColorHint="@color/colorPrimary">

                        <CustomControl.EditTextProximanovaRegular
                            android:id="@+id/editTextEmail"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/view_height"
                            android:background="@android:color/white"
                            android:hint="@string/emailAddress"
                            android:textColorHint="@color/colorPrimary"
                            android:textColor="@color/balck"
                            android:inputType="textEmailAddress"
                            android:textCursorDrawable="@null"
                            android:maxLines="1" />

                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/email"
                    android:layout_marginBottom="@dimen/view_horizontal_margin"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:background="@color/colorGrey" />

                <CustomControl.ButtonProximanovaSemiBold
                    android:id="@+id/submit"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_below="@+id/email"
                    android:layout_margin="30dp"
                    android:background="@drawable/blue_rounded_background"
                    android:text="@string/send"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />


            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/progressBar"
        style="@style/AVLoadingIndicatorView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        app:indicatorColor="@color/colorPrimary"
        app:indicatorName="LineSpinFadeLoaderIndicator" />

</RelativeLayout>