<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/white_with_orange">

    <include
        android:id="@+id/topBar"
        layout="@layout/top_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/topBar"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_weight="2"
                    android:background="@drawable/blue_border_bg"
                    android:minHeight="100dp">

                    <com.facebook.drawee.view.SimpleDraweeView
                        android:id="@+id/userProfile"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_margin="5dp"
                        android:background="@drawable/user" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1">


                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/usernameWrapper"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                      >

                        <CustomControl.EditTextProximanovaRegular
                            android:id="@+id/editTextEmailUserName"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:background="@android:color/transparent"
                            android:clickable="false"
                            android:focusable="false"
                            android:text=""
                            android:cursorVisible="false"
                            android:hint="@string/name"
                            android:maxLines="1"
                            android:textColor="@color/balck" />

                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginBottom="@dimen/view_horizontal_margin"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/colorGrey" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1">


                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                      >

                        <CustomControl.EditTextProximanovaRegular
                            android:id="@+id/editTextdateOfBirth"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:background="@android:color/transparent"
                            android:clickable="false"
                            android:focusable="false"
                            android:cursorVisible="false"
                            android:hint="@string/dateOfBirth"
                            android:maxLines="1"
                            android:textColor="@color/balck" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginBottom="@dimen/view_horizontal_margin"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/colorGrey" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1">


                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >

                        <CustomControl.EditTextProximanovaRegular
                            android:id="@+id/editTextUnivercity"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:background="@android:color/transparent"
                            android:clickable="false"
                            android:focusable="false"
                            android:cursorVisible="false"
                            android:hint="@string/univercity"
                            android:maxLines="1"
                            android:textColor="@color/balck" />

                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginBottom="@dimen/view_horizontal_margin"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/colorGrey" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1">


                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                       >

                        <CustomControl.EditTextProximanovaRegular
                            android:id="@+id/editTextNumPostViews"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:background="@android:color/transparent"
                            android:clickable="false"
                            android:focusable="false"
                            android:cursorVisible="false"
                            android:hint="@string/numOfViews"
                            android:maxLines="1"
                            android:textColor="@color/balck" />

                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginBottom="@dimen/view_horizontal_margin"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/colorGrey" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1">


                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                       >

                        <CustomControl.EditTextProximanovaRegular
                            android:id="@+id/editTextEmaillastDateSign"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:background="@android:color/transparent"
                            android:clickable="false"
                            android:focusable="false"
                            android:cursorVisible="false"
                            android:hint="@string/dateLastSignIn"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:textColor="@color/balck" />

                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginBottom="@dimen/view_horizontal_margin"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/colorGrey" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1">


                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                      >

                        <CustomControl.EditTextProximanovaRegular
                            android:id="@+id/editTextmemberSince"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:background="@android:color/transparent"
                            android:clickable="false"
                            android:hint="@string/memberSince"
                            android:maxLines="1"
                            android:focusable="false"
                            android:cursorVisible="false"
                            android:textColor="@color/balck" />

                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginBottom="@dimen/view_horizontal_margin"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/colorGrey" />

                <CustomControl.ButtonProximanovaSemiBold
                    android:id="@+id/signUpBtn"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/blue_rounded_background"
                    android:text="@string/signout"
                    android:textColor="@color/white"
                    android:textSize="18sp" />



            </LinearLayout>
        </RelativeLayout>
    </ScrollView>


</RelativeLayout>